# raintrix

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: init.cmake  init_ubuntu_26.04.sh
.github/ubuntu/: init.sh
.github/workflows/: ci.yml  deploy_docs.yml  release.yml
app/: CMakeLists.txt
app/src/: main.cpp
ext/: CMakeLists.txt  depzip.jsonc
lib/: CMakeLists.txt
lib/include/raintrix/: defaults.hpp  limits.hpp  panic.hpp  raintrix.hpp
lib/src/: build_version.hpp.in  raintrix.cpp
lib/src/cfg/: io.hpp  variable.hpp
lib/src/detail/: char_set.hpp  column.hpp  config.hpp  quad_view.hpp  rain.hpp  tile_column.hpp  trail.hpp
scripts/: build_docs.cmake  compile_shaders.sh  format_code.sh
